[package]
name = "itsboard-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
libm = "0.2.15"
panic-halt = "0.2.0"
postcard = "1.0.0"
serde = { version = "1.0.*", default-features = false }
csv = { version = "1.3.1", optional = true }

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f429"]

[dev-dependencies]
csv = "1.3.1"

[dependencies.sdl2]
optional = true
version = "0.37.0"
default-features = false
features = ["image", "unsafe_textures"]

[profile.release]
codegen-units = 1
incremental = false
debug = false
lto = true

[features]
simulator = ["dep:sdl2", "dep:csv"]
